init: logout
