# api/docs/swagger.json
@@ -334,8 +334,49 @@
                     "200": {
                         "description": "Login successful",
                         "schema": {
-                            "$ref": "#/definitions/gin.H"
+                            "$ref": "#/definitions/LoginResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/statushttp.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/statushttp.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/logout": {
+            "post": {
+                "description": "Logout",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth Service"
+                ],
+                "summary": "Logout",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer {token}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -1332,10 +1373,33 @@
                 }
             }
         },
-        "Role": {
+        "LoginResponse": {
             "type": "object",
             "properties": {
                 "applicationId": {
+                    "type": "integer"
+                },
+                "expiresAt": {
+                    "type": "string"
+                },
+                "refreshAt": {
+                    "type": "string"
+                },
+                "roleId": {
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "Role": {
+            "type": "object",
+            "properties": {
+                "application_id": {
                     "type": "integer"
                 },
                 "createdAt": {
@@ -1507,7 +1571,7 @@
                     "description": "@name UserRole",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/role_model.Role"
+                            "$ref": "#/definitions/Role"
                         }
                     ]
                 },
@@ -1614,10 +1678,6 @@
                     "type": "string"
                 }
             }
-        },
-        "gin.H": {
-            "type": "object",
-            "additionalProperties": {}
         },
         "pg.Id": {
             "type": "object",
